increased maximum possible buffer size